--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "* React, GraphQL及びWebsocketsを用いたチャットアプリです。",
   "main": "home-page/index.js",
   "scripts": {
+    "start": "npm start --prefix server",
     "server": "npm start --prefix server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
