--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,11 @@
   "name": "client",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development",
+    "build": "webpack --config webpack.prod.js",
+    "build:dev": "webpack --config webpack.dev.js",
     "build:start": "cd dist && PORT=8080 npx serve",
-    "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development --liveReload",
+    "start": "webpack serve --open --config webpack.dev.js",
+    "start:live": "webpack serve --open --config webpack.dev.js --liveReload",
     "docker:build": "docker build . -t wp5-starter",
     "docker:run": "docker run -p 8080:8080 wp5-starter"
   },
