--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/pitang1965/pitang-chat002#readme",
   "devDependencies": {
-    "concurrently": "^6.1.0"
+    "concurrently": "^6.1.0",
+    "webpack-merge": "^5.7.3"
   }
 }
