--- a/client/package.json
+++ b/client/package.json
@@ -16,31 +16,32 @@
     "email": "jherr@pobox.com"
   },
   "devDependencies": {
-    "@babel/core": "7.13.15",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/core": "7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "7.13.13",
-    "@webpack-cli/serve": "^1.3.1",
+    "@webpack-cli/serve": "^1.5.1",
     "babel-loader": "8.2.2",
-    "css-loader": "^5.2.1",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "2.0.0",
     "stylelint-config-recommended": "^5.0.0",
-    "webpack": "5.31.2",
-    "webpack-cli": "4.6.0",
+    "webpack": "5.38.1",
+    "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.16",
-    "@babel/runtime": "^7.13.10",
-    "autoprefixer": "^10.2.5",
+    "@apollo/client": "^3.3.19",
+    "@babel/runtime": "^7.14.0",
+    "autoprefixer": "^10.2.6",
     "graphql": "^15.5.0",
-    "postcss": "^8.2.13",
-    "postcss-loader": "^5.2.0",
+    "postcss": "^8.3.0",
+    "postcss-loader": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-tooltip": "^4.2.21",
     "subscriptions-transport-ws": "^0.9.18",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.4"
   }
 }
